--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1179,6 +1179,7 @@
 
          More info on languages and their article usage can be found at
          https://en.wikipedia.org/wiki/Article_(grammar)#Tables
+         FIXME: check with translator
     -->
     <string name="pv_reformat_titles_prefixes">một|Một|một|Một|the|The</string>
 
@@ -1189,6 +1190,8 @@
          For languages which do not use articles, use the following text.
          Use the book title as given IN ENGLISH.
          ==> "Only applicable to languages that use articles. English example: \"The Lord of The Rings\""
+
+         FIXME: check with translator
          -->
     <string name="ps_show_titles_reordered_off">Hiển thị như đã cho,\ne.g. “Chúa tể của những chiếc nhẫn”</string>
     <!--
@@ -1198,6 +1201,8 @@
          For languages which do not use articles, use the text.
          Use the book title as given IN ENGLISH.
          ==> "Only applicable to languages that use articles. English example: \"Lord of The Rings, The\""
+
+         FIXME: check with translator
          -->
     <string name="ps_show_titles_reordered_on">Chuyển bài viết hàng đầu xuống cuối,\ne.g. “Chúa tể của những chiếc nhẫn, The”</string>
 
@@ -1294,7 +1299,7 @@
     <!-- ListPreference title: shows a list of cameras of the device by lens-facing -->
     <string name="pt_camera_lens_facing"
             translatable="false">@string/pc_camera</string>
-    <!-- [VERIFIED] ListPreference value -->
+    <!-- [VERIFIED] ListPreference value FIXME: check front/back camera for ALL languages-->
     <string name="pe_camera_front">Camera trước</string>
     <!-- ListPreference value -->
     <string name="pe_camera_back">Camera sau</string>
