--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1211,20 +1211,22 @@
         TRANSLATORS: FIRST READ the information for the string "pv_reformat_titles_prefixes".
 
          Example of how a title is displayed, i.e. exactly as printed on the book.
-         For languages which do not use articles, use the following text.
-         Use the book title as given IN ENGLISH.
+
+         For languages with a grammar which does not use articles, use the following text:
          ==> "Only applicable to languages that use articles. English example: \"The Lord of The Rings\""
+         Use the book title as given IN ENGLISH.
          -->
     <string name="ps_show_titles_reordered_off">Display as given,\ne.g. “The Lord of The Rings”</string>
     <!--
         TRANSLATORS: FIRST READ the information for the string "pv_reformat_titles_prefixes".
 
          Example of how a reordered title is displayed.
-         For languages which do not use articles, use the text.
-         Use the book title as given IN ENGLISH.
+
+         For languages with a grammar which does not use articles, use the following text:
          ==> "Only applicable to languages that use articles. English example: \"Lord of The Rings, The\""
+         Use the book title as given IN ENGLISH.
          -->
-    <string name="ps_show_titles_reordered_on">Move a leading article to the end,\ne.g. “Lord of The Rings, The”</string>
+    <string name="ps_show_titles_reordered_on">Move an article at the start of a title to the end,\ne.g. “Lord of The Rings, The”</string>
 
     <!-- SwitchPreference title: allow mobile network usage or limit to use wifi/ethernet only. -->
     <string name="pt_allow_metered_network_data">Allow mobile data usage</string>
