--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1115,9 +1115,8 @@
 
          More info on languages and their article usage can be found at
          https://en.wikipedia.org/wiki/Article_(grammar)#Tables
-         FIXME: check with translator
     -->
-    <string name="pv_reformat_titles_prefixes">một|Một|một|Một|the|The</string>
+    <string name="pv_reformat_titles_prefixes">|</string>
 
     <!--
         TRANSLATORS: FIRST READ the information for the string "pv_reformat_titles_prefixes".
@@ -1128,9 +1127,8 @@
          ==> "Only applicable to languages that use articles. English example: \"The Lord of The Rings\""
          Use the book title as given IN ENGLISH.
 
-         FIXME: check with translator
          -->
-    <string name="ps_show_titles_reordered_off">Hiển thị như đã cho,\nv.d. “Chúa tể của những chiếc nhẫn”</string>
+    <string name="ps_show_titles_reordered_off">Chỉ áp dụng cho các ngôn ngữ sử dụng mạo từ. Ví dụ tiếng Anh: \"The Lord of The Rings\"</string>
     <!--
         TRANSLATORS: FIRST READ the information for the string "pv_reformat_titles_prefixes".
 
@@ -1140,9 +1138,8 @@
          ==> "Only applicable to languages that use articles. English example: \"Lord of The Rings, The\""
          Use the book title as given IN ENGLISH.
 
-         FIXME: check with translator
          -->
-    <string name="ps_show_titles_reordered_on">Chuyển bài viết hàng đầu xuống cuối,\nv.d. “Chúa tể của những chiếc nhẫn, The”</string>
+    <string name="ps_show_titles_reordered_on">Chỉ áp dụng cho các ngôn ngữ sử dụng mạo từ. Ví dụ tiếng Anh: \"The Lord of The Rings\"</string>
 
     <!-- SwitchPreference title: allow mobile network usage or limit to use wifi/ethernet only. -->
     <string name="pt_allow_metered_network_data">Cho phép sử dụng dữ liệu di động</string>
