--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -752,4 +752,5 @@
     <string name="ps_sort_author_name_family_first">Trier sur le nom de famille en premier,\npar exemple « Verne, Jules »</string>
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Attribuer des étagères</string>
+    <string name="site_description_dutch_comics_shopping">Néerlandais et plus ; Bandes dessinées; Shopping</string>
 </resources>
