--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -747,4 +747,5 @@
     <string name="ps_sort_author_name_family_first">Sorteer eerst op de achternaam,\nbvb. „Vandersteen, Willy”</string>
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Boekenplanken toewijzen</string>
+    <string name="site_description_dutch_comics_shopping">Nederlands en meer; Strips; Winkelen</string>
 </resources>
