Author types added: storyboard, lettering

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -766,4 +766,6 @@
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Přiřazení polic na knihy</string>
     <string name="site_description_dutch_comics_shopping">Nizozemština a další; Komiks; Nakupování</string>
+    <string name="lbl_author_type_storyboard">Scénáře</string>
+    <string name="lbl_author_type_lettering">Písmo</string>
 </resources>
