--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -752,4 +752,6 @@
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Assegnare gli scaffali</string>
     <string name="site_description_dutch_comics_shopping">Olandese e altro; Fumetti; Shopping</string>
+    <string name="lbl_author_type_storyboard">Scénarimage</string>
+    <string name="lbl_author_type_lettering">Lettering</string>
 </resources>
