--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -767,4 +767,6 @@
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Назначение книжных полок</string>
     <string name="site_description_dutch_comics_shopping">Голландский и не только; комиксы; Покупки</string>
+    <string name="lbl_author_type_storyboard">Раскадровка</string>
+    <string name="lbl_author_type_lettering">Надпись</string>
 </resources>
