--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -749,4 +749,6 @@
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Αναθέστε βιβλιοθήκες</string>
     <string name="site_description_dutch_comics_shopping">Ολλανδικά και άλλα; κόμικς; Αγορές</string>
+    <string name="lbl_author_type_storyboard">εικονογραφημένο σενάριο</string>
+    <string name="lbl_author_type_lettering">Γράμματα</string>
 </resources>
