--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -748,4 +748,6 @@
     <string name="a_space_b">%1$s %2$s</string>
     <string name="lbl_assign_bookshelves">Boekenplanken toewijzen</string>
     <string name="site_description_dutch_comics_shopping">Nederlands en meer; Strips; Winkelen</string>
+    <string name="lbl_author_type_storyboard">Storyboard</string>
+    <string name="lbl_author_type_lettering">Lettering</string>
 </resources>
