--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1686,10 +1686,16 @@
     <!-- Button label: the user finished reading a book. -->
     <string name="btn_finished">Finished</string>
 
-    <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
-
     <!-- Reading progress: param1: percentage 0..100 displayed with a percentage sign "%%". -->
     <string name="info_progress_x_percent">Reading\nProgress: %1$d%%</string>
     <!-- Reading progress: param1: current page; param2: total nr of pages. -->
     <string name="info_progress_page_x_of_y">Reading\nPage: %1$d of %2$d</string>
+
+    <!-- SwitchPreference : Read Progress: use the traditional Read/Unread checkbox style. -->
+    <string name="ps_use_read_progress_off">Use a simple Read/Unread status</string>
+    <!-- SwitchPreference : Read Progress: use the extended progress options. -->
+    <string name="ps_use_read_progress_on">Track progress in percentage or page number</string>
+
+    <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
+
 </resources>
